Update the footer section heigth to fix the gap between cta and content

--- a/client/my-sites/checkout/checkout-thank-you/marketplace/style.scss
+++ b/client/my-sites/checkout/checkout-thank-you/marketplace/style.scss
@@ -63,6 +63,7 @@
 			flex-direction: column;
 			justify-content: space-between;
 			flex-wrap: wrap;
+			height: 142px;
 			min-width: 280px;
 
 			@media ( max-width: 740px ) {
